--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,15 @@ body{
     display: flex;
     border:1px solid black ;
     text-align: center;
-    margin: auto;
-    padding-right: 70rem;
 
+
+}
+
+header{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 
