--- a/styles.css
+++ b/styles.css
@@ -25,21 +25,55 @@ header{
 
 
 main{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+
     width: 100%;
 }
 
 .subHeader{
-
     width: 100%;
     flex-direction: row;
     flex-wrap: wrap;
     display: flex;
     border:1px solid black ;
     text-align: center;
-    margin-top: 5rem;
 
 }
+
+.aside{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    width: 20%;
+    height: 100%;
+    margin-top: 5%;
+}
+
+.asideContent{
+    margin-left: 5%;
+}
+
+.mainFolder{
+    position: fixed;
+    top: 15%;
+    right: 40%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.mainDiv{
+     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+}
+
+/* .buttonFolder{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+
+} */
