--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ main{
 
 
 .folder:hover{
-   cursor: pointer;
+    cursor: pointer;
 }
 
 #menu{
@@ -86,34 +86,34 @@ li a {text-decoration : none; color : #2d2f31;}
 
 
 nav {
-  width : 300px; 
-  background: #d9d9d9;
-  margin : 40px auto; 
+    width : 300px; 
+    background: #d9d9d9;
+    margin : 40px auto; 
 }
 
 span {
-  padding : 30px;
-  background : #2d2f31; 
-  color : white;
-  font-size : 1.2em;
-  font-variant : small-caps;
-  cursor : pointer;
-  display: block;
+    padding : 30px;
+    background : #2d2f31; 
+    color : white;
+    font-size : 1.2em;
+    font-variant : small-caps;
+    cursor : pointer;
+    display: block;
 }
 
 span::after {
-  float: right;
-  right: 10%;
-  content: "+";
+    float: right;
+    right: 10%;
+    content: "+";
 }
 
 .slide {
-  clear:both;
-  width:100%;
-  height:0px;
-  overflow: hidden;
-  text-align: center;
-  transition: height .4s ease;
+    clear:both;
+    width:100%;
+    height:0px;
+    overflow: hidden;
+    text-align: center;
+    transition: height .4s ease;
 }
 
 .slide li {padding : 30px;}
@@ -121,3 +121,47 @@ span::after {
 #touch {position: absolute; opacity: 0; height: 0px;}    
 
 #touch:checked + .slide {height: 300px;} 
+
+
+
+/* New Modal */
+body {font-family: Arial, Helvetica, sans-serif;}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
