--- a/styles.css
+++ b/styles.css
@@ -1,70 +1,7 @@
-body{
-    display: row;
-    flex-direction: column;
-    flex-wrap: wrap;
-
-}
-
-
-.navBar{
-    width: 100%;
-    flex-direction: row;
-    flex-wrap: wrap;
-    display: flex;
-    border:1px solid black ;
-    text-align: center;
-
-}
-
-header{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-
-main{
-
-    width: 100%;
-}
-
-.subHeader{
-    width: 100%;
-    flex-direction: row;
-    flex-wrap: wrap;
-    display: flex;
-    border:1px solid black ;
-    text-align: center;
-
-}
-
-.aside{
-    display: flex;
-    flex-direction: column;
-    border: 1px solid black;
-    width: 20%;
-    height: 50rem;
-    margin-top: 5%;
-}
-
-.asideContent{
-    margin-left: 5%;
-}
-
-.mainFolder{
-    position: fixed;
-    top: 15%;
-    right: 40%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-}
-
 .folder ul {
     display: none;
+    flex-direction: column;
+    flex-wrap: wrap;
     list-style-type: none;
 }
 
@@ -77,47 +14,49 @@ main{
    cursor: pointer;
 }
 
-#menu{
-    list-style-type: none;
+.subMenu{
+    display: none;
+}
+
+.folder {
+    text-decoration: none;
+    color: var(--theme-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 400;
+    padding: 10px;
+    font-size: 14px;
+    border-radius: 6px;
+    transition: 0.3s;
+    transform: translateX(-60px);
+  }
+
+  #menu a {
+    text-decoration: none;
+    color: var(--theme-color);
+    display: flex;
+    align-items: center;
+    font-weight: 400;
+    padding: 10px;
+    font-size: 14px;
+    border-radius: 6px;
+    transition: 0.3s;
+}
+
+#menu a:hover{
+    color: #0d6efd;
+}
+
+.subHeader{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 
-li a {text-decoration : none; color : #2d2f31;}
 
 
-nav {
-  width : 300px; 
-  background: #d9d9d9;
-  margin : 40px auto; 
-}
 
-span {
-  padding : 30px;
-  background : #2d2f31; 
-  color : white;
-  font-size : 1.2em;
-  font-variant : small-caps;
-  cursor : pointer;
-  display: block;
-}
 
-span::after {
-  float: right;
-  right: 10%;
-  content: "+";
-}
 
-.slide {
-  clear:both;
-  width:100%;
-  height:0px;
-  overflow: hidden;
-  text-align: center;
-  transition: height .4s ease;
-}
-
-.slide li {padding : 30px;}
-
-#touch {position: absolute; opacity: 0; height: 0px;}    
-
-#touch:checked + .slide {height: 300px;} 
